--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -82,3 +82,4 @@ a:hover, a:active { text-decoration:underline; }
 #voteManage dl dd .del { font-size:12px; margin:0px 5px; }
 #voteManage dl dd.button img { vertical-align:middle; }
 #voteManage dl dd.button a { margin:0px 10px; }
+#aStyle a:hover{text-decoration:underline;}
