Mybatis if test #{}匹配中文字符有问题,+_+

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2,7 +2,7 @@ body { font-size:12px; background:#fff; color:#333; line-height:25px; margin:0; 
 h2,h4,p,ul,li,dl,dt,dd,form,input { margin:0; padding:0; }
 img { border:0; }
 em { font-style:normal; }
-.wrap { width:880px; margin:0px auto; }
+.wrap { width:950px; margin:0px auto; }
 .red, a.red { color:#f00; }
 .input-text { padding:2px 4px; border:1px solid #79a4cf; }
 .input-button { border:none; }
@@ -19,7 +19,7 @@ a:hover, a:active { text-decoration:underline; }
 #navbar .profile .return a { margin:0px 25px; background:url(../images/new.gif) left center no-repeat; padding-left:15px; }
 
 #navbar .search { text-align:right; }
-#navbar .search input { margin:3px auto; vertical-align:middle; }
+#navbar .search input { margin:3px auto; /* vertical-align:middle; */ }
 #navbar .search .input-button { background:url(../images/button_search.gif); width:40px; height:22px; margin:0px 4px; }
 #login { margin:10px auto; }
 #login .main { background:#79a4cf url(../images/voteBanner.jpg) no-repeat; height:154px; padding-left:190px; position:relative; }
